@@ -1,5 +1,6 @@
 version 1.0.8 (not yet released)
 --------------------------------
+* add 'textcolor' kwarg to drawmeridians and drawparallels (issue 145).
 * don't assume grid is regular with adding cyclic point in addcyclic. 
   New kwarg 'cyclic_dimension' added, with a default of 360.  Partially
   addresses issue 139.
